changed scroll bar and fixed gap on the right of webpage

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,7 +1,43 @@
 @import "./vars.css";
 
+/* Reset default margin and padding */
+html,
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Apply box-sizing to all elements */
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 .App {
   background-color: var(--color-bg);
   width: 100%;
-  height: 100%;
+  min-height: 100vh; /* Ensure it covers the full viewport height */
+  overflow-x: hidden; /* Hide horizontal overflow */
+}
+
+/* For Firefox */
+* {
+  scrollbar-color: var(--color-secondary) var(--color-dark);
+}
+
+/* For WebKit-based browsers */
+::-webkit-scrollbar {
+  width: 12px; /* Width of the scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background: var(--color-dark); /* Color of the track */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--color-secondary); /* Color of the scrollbar thumb */
+  border-radius: 6px; /* Rounded corners on the thumb */
+  border: 3px solid lightgray; /* Creates padding around the thumb */
 }
